--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700&display=swap" rel="stylesheet">
     <title>Keep Notes App</title>
@@ -58,7 +58,8 @@
             </button>
         </div>
     </header>
-    <main>
+    <main class="rows">
+
         <section id="categories-list"></section>
 
         <section id="notes-list"></section>
@@ -69,7 +70,7 @@
                 <textarea name="note-content" id="note-content" placeholder="Note content..."></textarea>
                 <button type="submit">Save Note</button>
             </form>
-        </section>
+        </section> 
 
     </main>
 </div>
